--- a/free-nodes/page-4.htm
+++ b/free-nodes/page-4.htm
@@ -111,6 +111,102 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-12">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-10-12-clash-meta-github.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/9f6fbafd14e1616872a10832a3945402.webp" alt="VPN在线 | 10月12日21M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-12-clash-meta-github.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 10月12日21M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、美国、新加坡、欧洲、韩国、加拿大、日本等地区,最高速度可达21 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-11">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-10-11-clash-verge-rev-windows.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/87e1bcb097438d735eae59e8bc3fc9f2.webp" alt="VPN在线 | 10月11日19.4M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-11-clash-verge-rev-windows.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 10月11日19.4M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了日本、加拿大、欧洲、美国、韩国、新加坡、香港等地区,最高速度可达19.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-10">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-10-10-clash-stash.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/ba1b8b70e963c2e20700334ecf898921.webp" alt="VPN在线 | 10月10日18.6M/S|免费Shadowrocket节点/V2ray节点/Clash节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-10-clash-stash.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 10月10日18.6M/S|免费Shadowrocket节点/V2ray节点/Clash节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了日本、香港、新加坡、韩国、美国、欧洲、加拿大等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-09">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-10-9-clash-verge-rev-windows.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/87e1bcb097438d735eae59e8bc3fc9f2.webp" alt="VPN在线 | 10月9日18.6M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-9-clash-verge-rev-windows.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 10月9日18.6M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了欧洲、美国、韩国、香港、加拿大、日本、新加坡等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-08">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-10-8-clash-node.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/68a2397f2a20b18df34051a474f48192.webp" alt="VPN在线 | 10月8日18.7M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-8-clash-node.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 10月8日18.7M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、日本、欧洲、加拿大、韩国、美国、新加坡等地区,最高速度可达18.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-07">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-10-7-node-share.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/c8c30e8ff3b86b64ad227fce7657cea9.webp" alt="VPN在线 | 10月7日19.8M/S|免费Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-7-node-share.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 10月7日19.8M/S|免费Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、韩国、加拿大、美国、新加坡、日本、欧洲等地区,最高速度可达19.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-10-06">
                         <div class="col-md-3">
                             <div class="img-box">
@@ -185,16 +281,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-10-24-clash-v2ray-ss-ssr.htm" title="VPN在线 | 10月24日18.4M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月24日18.4M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-8-clash-node.htm" title="VPN在线 | 10月8日18.7M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月8日18.7M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-19-clash-verge-rev-nodes.htm" title="VPN在线 | 10月19日20.9M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月19日20.9M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-5-clash-verge-rev-nodes.htm" title="VPN在线 | 11月5日18.2M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月5日18.2M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-10-clash-stash.htm" title="VPN在线 | 10月10日18.6M/S|免费Shadowrocket节点/V2ray节点/Clash节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月10日18.6M/S|免费Shadowrocket节点/V2ray节点/Clash节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-1-clash-node-daily-updates.htm" title="VPN在线 | 11月1日22.7M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月1日22.7M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-31-clash-verge-rev-windows.htm" title="VPN在线 | 10月31日19.1M/S|免费V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月31日19.1M/S|免费V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-node-share.htm" title="VPN在线 | 10月6日18.3M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月6日18.3M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-2-clash-node-daily-updates.htm" title="VPN在线 | 11月2日20.3M/S|免费V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月2日20.3M/S|免费V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-12-clash-meta-github.htm" title="VPN在线 | 10月12日21M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月12日21M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-14-clash-verge-rev-github.htm" title="VPN在线 | 10月14日18.7M/S|免费Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月14日18.7M/S|免费Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-27-clash-node.htm" title="VPN在线 | 10月27日20M/S|免费SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月27日20M/S|免费SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-node-share.htm" title="VPN在线 | 10月7日19.8M/S|免费Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月7日19.8M/S|免费Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-22-clash-v2ray-ss-ssr.htm" title="VPN在线 | 10月22日22.8M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月22日22.8M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-9-clash-verge-rev-windows.htm" title="VPN在线 | 10月9日18.6M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月9日18.6M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-clash-verge-rev-nodes.htm" title="VPN在线 | 10月5日18.6M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月5日18.6M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-8-clash-node-daily-updates.htm" title="VPN在线 | 11月8日20M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 11月8日20M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-3-clash-verge-rev-windows.htm" title="VPN在线 | 10月3日21.8M/S|免费Clash节点/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月3日21.8M/S|免费Clash节点/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -206,7 +302,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
